--- a/vistocar_inspect/src/pages/home/home.html
+++ b/vistocar_inspect/src/pages/home/home.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the HomePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar hideBackButton>
@@ -40,10 +34,10 @@
     <ion-col>
       <ion-card padding-top (click)="consultInspect();">
         <ion-card-header>
-          <label>CONSULTAR</label>
+          <label>VISTORIAS</label>
         </ion-card-header>
         <ion-card-content>
-          <label class="color-primary">Vistorias / Transmissões</label>
+          <label class="color-primary">Consultar</label>
         </ion-card-content>
       </ion-card>
     </ion-col>
@@ -56,7 +50,7 @@
           <label>AGENDAMENTOS</label>
         </ion-card-header>
         <ion-card-content>
-          <label class="color-primary">Visualizar</label>
+          <label class="color-primary">Consultar</label>
         </ion-card-content>
       </ion-card>
     </ion-col>
