--- a/vistocar_inspect/src/pages/login/login.html
+++ b/vistocar_inspect/src/pages/login/login.html
@@ -44,6 +44,7 @@
         block
         large
         color="secondary"
+        [disabled]="!credentials.username || !credentials.password"
         (click)="login()">
         Entrar
       </button>
