--- a/vistocar_inspect/src/pages/consult-inspect/consult-inspect.html
+++ b/vistocar_inspect/src/pages/consult-inspect/consult-inspect.html
@@ -12,7 +12,7 @@
   <ion-row>
     <ion-col>
       <ion-list>
-        <ion-item *ngFor="let inspect of inspects;" (click)="details();">
+        <ion-item *ngFor="let inspect of inspects;">
           <h2 padding-top>Placa: {{ inspect.board }}</h2>
           <p>Tipo de vistoria: {{ inspect.inspectType }} - {{ inspect.status }}</p>
           <button ion-button clear item-end (click)="details();" class="button-font-text">Visualizar</button>
