--- a/vistocar_inspect/src/pages/home/home.html
+++ b/vistocar_inspect/src/pages/home/home.html
@@ -7,13 +7,13 @@
         <div padding-right>
           Sair
         </div>
-        <ion-icon ios="ios-exit-outline" md="md-exit"></ion-icon>
+        <ion-icon ios="arrow-forward" md="md-exit"></ion-icon>
+        <!-- <ion-icon name="arrow-forward"></ion-icon> -->
       </button>
     </ion-buttons>
   </ion-navbar>
 
 </ion-header>
-
 
 <ion-content padding>
 
