--- a/vistocar_inspect/src/pages/consult-inspect/consult-inspect.html
+++ b/vistocar_inspect/src/pages/consult-inspect/consult-inspect.html
@@ -9,7 +9,7 @@
 
 <ion-content padding>
 
-  <ion-row>
+  <!-- <ion-row>
     <ion-col>
       <ion-list>
         <ion-item *ngFor="let inspect of inspects;">
@@ -19,6 +19,20 @@
         </ion-item>
       </ion-list>
     </ion-col>
-  </ion-row>
+  </ion-row> -->
 
+  <ion-content>
+
+    <ion-list>
+      <ion-item *ngFor="let i of items">{{i.chassi}}</ion-item>
+    </ion-list>
+
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+      <ion-infinite-scroll-content
+        loadingSpinner="bubbles"
+        loadingText="Carregando...">
+      </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+
+   </ion-content>
 </ion-content>
