--- a/vistocar_inspect/src/pages/consult-inspect/consult-inspect.html
+++ b/vistocar_inspect/src/pages/consult-inspect/consult-inspect.html
@@ -23,7 +23,7 @@
               {{ setStatusOfInspect(inspect.vistoria_feita) }}
             </ion-badge>
           </p>
-          <button ion-button clear item-end (click)="details();" class="button-font-text">Visualizar</button>
+          <button ion-button clear item-end (click)="details(inspect);" class="button-font-text">Visualizar</button>
         </ion-item>
       </ion-list>
     </ion-col>
